tests/sksl/errors/UnspecifiedBinding.metal
### Compilation failed:

error: 1: compute shader in / out variables must have a layout binding and set
in int[] x;
^^^^^^^^^^
1 error
